--- a/ninja_money/templates/index.html
+++ b/ninja_money/templates/index.html
@@ -1,59 +1,79 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/css/styles.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"> 
+
+    <link rel="stylesheet" href= "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
+
     <title>Ninja Money</title>
+
 </head>
 <body>
-    <h1>Ninja Money</h1>
-    <div class="container">
-        <laber for="">Tu Oro:</label>
-        <h3>{{request.session.monto_oro}}</h3>
+
+    <div class="container" align="center">
+            <h1>Ninja Money</h1>
+            <h2>Tu Oro : {{request.session.monto_oro}} </h2>
+    <br>
+
+    <div id="flotante" align="center" style="color: green">
+        <div class="blue">
+            <h2>Farm</h2>
+            <h4>( Gana 10 - 20 Golds)</h4>
+            <form action="process_money" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="farm">
+                <button type="submit">Find Gold!</button>
+            </form>
+        </div>
+        <div class="blue">
+            <h1>Cave</h1>
+            <h4>( Gana 5 - 10 Golds)</h4>
+            <form action="process_money" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="cave">
+                <button type="submit">Find Gold!</button>
+            </form>
+        </div>
+        <div class="blue">
+            <h1>House</h1>
+            <h4>( Gana 2 - 5 Golds)</h4>
+            <form action="process_money" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="house">  
+                <button type="submit">Find Gold!</button>
+            </form>
+        </div>
+        <div class="blue">
+            <h1>Casino</h1>
+            <h4>( Gana/Pierde 0 - 50 Golds)</h4>
+            <form action="process_money" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="casino">
+                <button type="submit">Find Gold!</button>
+            </form>
+        </div>
     </div>
-    <hr>
-    <div class="">
-        <form action="process_money" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="farm">
-            <button type="submit">Farm - Find Gold!</button>
-        </form>
-    </div>
-    <hr>
-    <div class="">
-        <form action="process_money" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="cave">
-            <button type="submit">Cave - Find Gold!</button>
-        </form>
-    </div>
-    <hr>
-    <div class="">
-        <form action="process_money" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="house">  
-            <button type="submit">House - Find Gold!</button>
-        </form>
-    </div>
-    <hr>
-    <div class="">
-        <form action="process_money" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="casino">
-            <button type="submit">Casino - Find Gold!</button>
-        </form>
     </div>
 
-    <hr>
-    <div class="activities">
-        {% for move in request.session.moves %}
-            {% if move.0 < 0 %}
-                <p>Has perdido {{move.0}} oro en {{move.1}} ({{move.2}})</p>
-            {% else %}
-                <p>Has ganado {{move.0}} oro en {{move.1}} ({{move.2}})</p>
-            {% endif %}
-        {% endfor %}
+    <h1 style="text-align:center;color:green;"> Actividades: </h1> 
+    <div class="container" position="absolute">
+        <div class="container vertical-scrollable">
+            <div class="row text-center">
+                {% for move in request.session.moves %}
+                    {% if move.0 < 0 %}
+                        <div class="col-sm-8-red">Has perdido {{move.0}} oro en {{move.1}} ({{move.2}})</div>
+                    {% else %}
+                        <div class="col-sm-8-green">Has ganado {{move.0}} oro en {{move.1}} ({{move.2}})</div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
     </div>
 
 </body>
